--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10392,8 +10392,9 @@ footer {
         padding: 0 20px; } }
     /* line 57, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content .main-col h6 {
-      clear: both; }
-  /* line 65, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+      clear: both;
+      margin: 0; }
+  /* line 66, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
   .page-content.has-aside aside {
     float: left;
     display: block;
@@ -10417,7 +10418,7 @@ footer {
     .page-content.has-aside aside:last-child {
       margin-right: 0; }
   @media screen and (min-width: 48em)  {
-    /* line 75, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 76, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside .main-col {
       float: left;
       display: block;
@@ -10429,7 +10430,7 @@ footer {
       /* line 89, bower_components/neat/app/assets/stylesheets/grid/_span-columns.scss */
       .page-content.has-aside .main-col:last-child {
         margin-right: 0; }
-    /* line 82, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 83, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside aside {
       float: left;
       display: block;
@@ -10443,16 +10444,16 @@ footer {
       /* line 89, bower_components/neat/app/assets/stylesheets/grid/_span-columns.scss */
       .page-content.has-aside aside:last-child {
         margin-right: 0; }
-      /* line 90, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+      /* line 91, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
       .page-content.has-aside aside.is-right {
         float: right;
         padding: 0; }
-      /* line 95, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+      /* line 96, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
       .page-content.has-aside aside.has-border {
         border-left: 1px solid #dddddd;
         padding: 20px 0 40px 20px; } }
   @media screen and (min-width: 64em)  {
-    /* line 106, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 107, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside .main-col {
       float: left;
       display: block;
@@ -10464,7 +10465,7 @@ footer {
       /* line 89, bower_components/neat/app/assets/stylesheets/grid/_span-columns.scss */
       .page-content.has-aside .main-col:last-child {
         margin-right: 0; }
-    /* line 113, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 114, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside aside {
       float: left;
       display: block;
@@ -10477,7 +10478,7 @@ footer {
       .page-content.has-aside aside:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 80em)  {
-    /* line 124, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 125, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside .main-col {
       float: left;
       display: block;
@@ -10489,7 +10490,7 @@ footer {
       /* line 89, bower_components/neat/app/assets/stylesheets/grid/_span-columns.scss */
       .page-content.has-aside .main-col:last-child {
         margin-right: 0; }
-    /* line 131, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+    /* line 132, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
     .page-content.has-aside aside {
       float: left;
       display: block;
@@ -10502,7 +10503,7 @@ footer {
       .page-content.has-aside aside:last-child {
         margin-right: 0; } }
 
-/* line 144, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+/* line 145, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
 .full-page-content {
   padding: 0 10px;
   margin-top: 10px; }
@@ -10524,7 +10525,7 @@ footer {
       /* line 89, bower_components/neat/app/assets/stylesheets/grid/_span-columns.scss */
       .full-page-content .two-col .col:last-child {
         margin-right: 0; }
-      /* line 164, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
+      /* line 165, /Users/M8M/Sites/platform-pattern-library/assets/sass/5_layouts/_layout-general.scss */
       .full-page-content .two-col .col:last-child {
         margin: 0; } }
 
