--- a/assets/sass/5_layouts/_layout-general.scss
+++ b/assets/sass/5_layouts/_layout-general.scss
@@ -56,6 +56,7 @@
 
       h6 {
          clear: both;
+         margin: 0;
       }
 
    }
